insertion bug fixed in array